--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <div class="container mt-5">
   <h1 class="alert alert-success" role="alert">
-    Welcome back, Tony!
+    Welcome back, {{ user }}!
   </h1>
 </div>
