feat: modify main.hbs and index.hbs to optimize UX

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,7 @@
 <div class="container mt-5">
+  {{#if user}}
   <h1 class="alert alert-success" role="alert">
     Welcome back, {{ user }}!
   </h1>
+  {{/if}}
 </div>
