--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,10 +14,13 @@
   <header>
     <nav class="navbar navbar-dark bg-dark">
       <div class="container">
-        <h1 class="navbar-brand mb-0">
-          <span>Login Handcraft</span>
-          <i class="fas fa-user-check ml-1"></i>
-        </h1>
+        <a class="navbar-brand mb-0 h1" href="/">
+          <span href="/">
+            Login Handcraft
+            <i class="fas fa-user-check ml-1"></i>
+          </span>
+        </a>
+        <a href="/login" class="btn btn-outline-light" role="button" aria-pressed="true">Login</a>
       </div>
     </nav>
   </header>
