--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,7 +20,11 @@
             <i class="fas fa-user-check ml-1"></i>
           </span>
         </a>
+        {{#if user}}
+        <a href="/logout" class="btn btn-outline-warning" role="button" aria-pressed="true">Logout</a>
+        {{else}}
         <a href="/login" class="btn btn-outline-light" role="button" aria-pressed="true">Login</a>
+        {{/if}}
       </div>
     </nav>
   </header>
