--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,7 +5,7 @@
         Account Login
         <i class="fas fa-sign-in-alt ml-1"></i>
       </h3>
-      <form action="/login" method="POST" class="was-validated">
+      <form action="/login" method="POST">
         <div class="form-group">
           <label for="email">Username</label>
           <div class="input-group">
@@ -16,9 +16,6 @@
             </div>
             <input type="email" class="form-control rounded-right" id="email" name="email" value="{{account.email}}"
               required>
-            <div class="invalid-feedback">
-              Please type your email.
-            </div>
           </div>
         </div>
         <div class="form-group">
@@ -30,9 +27,6 @@
               </span>
             </div>
             <input type="password" class="form-control rounded-right" id="password" name="password" required>
-            <div class="invalid-feedback">
-              Please type your password.
-            </div>
           </div>
         </div>
 
